--- a/404.html
+++ b/404.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>
+        var p = new String(window.location.pathname);
+        if( p == "/2022/04/literature-poetry-a-silly-night.html" ||
+            p == "/2022/05/literature-poetry-three-short-poems.html" ||
+            p == "/2022/05/literature-poetry-my-sweet-dove.html" ||
+            p == "/2022/05/literature-poetry-friends-forever.html" ||
+            p == "/2022/05/literature-poetry-teachers.html" ||
+            p == "/2022/05/literature-poetry-a-crazy-festival.html" ||
+            p == "/2022/06/literature-poetry-the-beautiful-lifes-phase.html" ||
+            p == "/2022/06/literature-poetry-remember-those-days.html" ||
+            p == "/2022/06/literature-poetry-when-i-see-you.html" ||
+            p == "/2022/06/literature-poetry-dream.html" ||
+            p == "/2022/07/literature-poetry-dead-or-head-part-1.html" ||
+            p == "/2022/07/literature-poetry-dead-or-head-part-2.html" ||
+            p == "/2022/07/literature-poetry-what-i-like.html" ||
+            p == "/2022/07/literature-poetry-father.html" ||
+            p == "/2022/09/literature-the-unseen-process.html" ||
+            p == "/2022/10/projects-drawlax.html" ||
+            p == "/p/about.html" ||
+            p == "/p/contact-us.html" ||
+            p == "/p/disclaimer.html" ||
+            p == "/p/privacy-policy.html"
+            ){
+            window.onload = function() {
+                    location.href = "https://blogs.zellospark.com" + p;
+            }
+        }
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="3; URL=https://www.zellospark.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,6 +64,5 @@
             Page does not exist, redirecting to home page....
         </div>
     </main>
-    
 </body>
 </html>
