--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
         }
     </script>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3; URL=https://www.zellospark.com/" />
+    <meta http-equiv="refresh" content="2; URL=https://www.zellospark.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -61,7 +61,7 @@
     <main>
         <h4 class="header404">404</h4>
         <div class="content-404">
-            Page does not exist, redirecting to home page....
+            Page does not exist.
         </div>
     </main>
 </body>
